# KatieRustFly

./: .gitignore  IMPLEMENTATION_ROADMAP.md  INCOMPLETE_FEATURES_ANALYSIS.md  README.md  SOLAR_SYSTEM_MAP_PLAN.md  TODO.md  run-debug.cmd  run.cmd  run.sh
KatieFlySimRust/: .gitignore  CHANGELOG.md  CPP_TO_RUST_PATTERNS.md  Cargo.toml  Cargo.toml.template  FILE_MAPPING.md  PROGRESS.md  README.md  RUST_PORT_PLAN.md  SESSION_3_SUMMARY.md
KatieFlySimRust/maps/: New Map.ron  example_binary_system.ron
KatieFlySimRust/saves/: autosave.sav  quicksave.sav
KatieFlySimRust/src/: game_constants.rs  game_state.rs  lib.rs  main.rs  player.rs
KatieFlySimRust/src/entities/: bullet.rs  engine.rs  game_object.rs  mod.rs  planet.rs  rocket.rs  rocket_part.rs  satellite.rs
KatieFlySimRust/src/game_modes/: mod.rs  multiplayer_client.rs  multiplayer_host.rs  single_player.rs  split_screen.rs
KatieFlySimRust/src/map_config/: maps.rs  mod.rs  orbit_calculator.rs
KatieFlySimRust/src/menus/: main_menu.rs  map_selection_menu.rs  mod.rs  multiplayer_menu.rs  multiplayer_saves_menu.rs  online_host_menu.rs  online_join_menu.rs  online_multiplayer_menu.rs  saves_menu.rs
KatieFlySimRust/src/networking/: mod.rs  multiplayer_client.rs  multiplayer_host.rs  network_manager.rs
KatieFlySimRust/src/physics/: gravity_simulator.rs  mod.rs  trajectory.rs  trajectory.rs.wip
KatieFlySimRust/src/save_system/: game_save_data.rs  mod.rs
KatieFlySimRust/src/systems/: fuel_transfer_network.rs  fuel_transfer_network.rs.wip  mod.rs  orbit_maintenance.rs  orbit_maintenance.rs.wip  player_input.rs  satellite_manager.rs  world.rs  (+1 more)
KatieFlySimRust/tests/: integration_tests.rs
KatieMapMaker/: Cargo.toml  README.md  run-map-maker.cmd
KatieMapMaker/src/: main.rs  map_data.rs
(+10 files in other folders)
