[package]
name = "katie_fly_sim_rust"
version = "0.1.0"
edition = "2021"
authors = ["FlySimNewA Team"]
description = "Rust port of FlySimNewA - A physics-based space flight simulator"
license = "MIT OR Apache-2.0"

[dependencies]
# Graphics and windowing - Pure Rust game library (no external dependencies!)
macroquad = "0.4"

# Serialization for save files and networking
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # For human-readable save files
bincode = "1.3"     # For binary network protocol
ron = "0.8"         # For custom map files

# Async networking
tokio = { version = "1", features = ["full"] }

# Error handling helpers
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Additional utilities
lazy_static = "1.4"  # For global constants that need runtime initialization

[dev-dependencies]
# Testing utilities
approx = "0.5"  # For floating-point comparisons in physics tests

[profile.dev]
opt-level = 1  # Slight optimization for better dev performance

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Remove debug symbols for smaller binary

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
